refactor: optimize agentMachine default value and collection initialization method